--- a/_posts/.2024-04-28-all-ways-to-submit-data.md
+++ b/_posts/.2024-04-28-all-ways-to-submit-data.md
@@ -30,7 +30,7 @@ async submit() {
     formData.append(key, (this.form as any)[key])
   }
 
-  const response = await fetch('https://api.formoxy.com/v1/digest/821f4a10-127c-46c6-bc80-8790d219575a', {
+  const response = await fetch('https://api.formshive.com/v1/digest/821f4a10-127c-46c6-bc80-8790d219575a', {
     method: 'POST',
     body: formData,
     redirect: 'manual'
@@ -45,7 +45,7 @@ Unlike [axios](https://github.com/axios/axios/issues/3924), `fetch` also handles
 ```json
 {
   type: "opaqueredirect",
-  url: "https://api.formoxy.com/v1/digest/821f4a10-127c-46c6-bc80-8790d219575a",
+  url: "https://api.formshive.com/v1/digest/821f4a10-127c-46c6-bc80-8790d219575a",
   redirected: true,
   status: 302,
   ok: false,
